# education_rag

./: .gitignore  pyproject.toml
api/: main.py  models.py  routes.py  server.py
config/: constants.py  settings.py
scripts/: build_index.py  demo.py  run_evaluation.py  test_api.py  test_retrieval.py  test_system.py
src/embedding/: cache.py  encoder.py
src/evaluation/: benchmark.py  comparative_benchmark.py  comparative_reporter.py  evaluator.py  judge.py  metrics.py  mock_judge.py  reporter.py  synthetic_dataset.py  system_variants.py
src/generation/: llm.py  prompt_templates.py  translator.py
src/ingestion/: chunker.py  cleaner.py  loader.py
src/retrieval/: reranker.py  retriever.py
src/storage/: database.py  schemas.py
tests/: test_chunking.py  test_embedding.py  test_evaluation.py  test_ingestion.py  test_storage.py
