[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.7",
    "datasets>=3.5.1",
    "fastapi>=0.115.9",
    "google-generativeai>=0.8.5",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
]
authors = ["Guillermo <guillermo.martincoello@gmail.com>"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
f5-tts = { git = "https://github.com/jpgallegoar/Spanish-F5.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

